# llm_riddles

./: .gitignore  basic_chat.py  cohere_test.py  main.py  pyproject.toml  readme.md  two_agent_chat.py
utils/: agent.py
