[tool.poetry]
name = "llm-riddles"
version = "0.1.0"
description = "Riddles game played using agentic LLMs"
authors = ["Grant Nicholas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
sentencepiece = "^0.2.0"
protobuf = "^5.27.1"
cohere = "^5.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
